feat: implement multiple core features including user auth, Telegram verification, and broadcast events

--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,31 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# RabbitMQ Configuration
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_VHOST=/
+RABBITMQ_QUEUE=default
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+
+
+# Pusher Configuration
+PUSHER_APP_ID=test
+PUSHER_APP_KEY=test
+PUSHER_APP_SECRET=test
+PUSHER_HOST=soketi
+PUSHER_PORT=6001
+PUSHER_SCHEME=http
+PUSHER_APP_CLUSTER=mt1
+
 VITE_APP_NAME="${APP_NAME}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_ID}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+
+TELEGRAM_BOT_TOKEN="KEY"
+TELEGRAM_CHANNEL="ID"
+GNEWS_API_KEY="KEY"
