--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@laravel/echo-vue": "^2.1.3",
         "@types/node": "^22.13.5",
         "@vue/eslint-config-typescript": "^14.3.0",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-vue": "^9.32.0",
+        "laravel-echo": "^2.1.3",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "pusher-js": "^8.4.0",
         "typescript-eslint": "^8.23.0",
         "vue-tsc": "^2.2.4"
     },
@@ -39,6 +42,7 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue-sonner": "^1.3.2",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
